Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 986
    • Issues 986
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 132
    • Merge requests 132
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #507

Closed
Open
Created Jan 13, 2017 by Bugzilla Migration User@bugzilla-migration

dashdemux: mosaic issue for MPEG DASH live streaming due to not updating headers

Submitted by WeiChungChang

Link to original bug (#777206)

Description

Created attachment 343415
issue description in detail

as https://bugzilla.gnome.org/show_bug.cgi?id=767682

original test URL is invalid but I found a one which can reproduce the issue.

Please refer to the attached in detail, or by the link below:
http://programmingmemojohnchang.blogspot.tw/2017/01/potential-race-condition-issue-of.html

I tested it for 1.4.5 (a little old) but I wonder it will happen for master also.
Please help to check it.

[Issue]:
Wrong codec settings leads to mosaic (ex, use the codec setting of high bit-rate representation to decode data of low bit-rate representation ).

[Root cause]:

  1. Race condition between threads.
  2. Slow start of gst_mpd_client_setup_streaming() when updating manifest.

Attachment 343415, "issue description in detail":
Potential_race_condition_issue_of_GStreamer.pdf

Assignee
Assign to
Time tracking