subprojects/gst-plugins-bad/ext/dash/gstdashdemux.h
@@ -112,6 +112,8 @@ struct _GstDashDemuxStream
   GstClockTime target_time;
   /* Average skip-ahead time (only in trickmode-key-units) */
   GstClockTime average_skip_size;
+
+  gchar *last_representation_id;
 };
 
 /**
